# pong-in-c

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
src/: main.c
